# libhijacker

./: .gitignore  .gitmodules  CMakeLists.txt  send_elf.py
.github/workflows/: cmake.yml
daemon/: CMakeLists.txt
daemon/source/: commands.cpp  main.cpp  msg.cpp  msg.hpp  thread.hpp
daemon_shim/: CMakeLists.txt
daemon_shim/source/: main.cpp
include/: util.hpp
include/elf/: elf.hpp
include/hijacker/: hijacker.hpp
include/kernel/: proc.hpp  rtld.hpp
libhijacker/: CMakeLists.txt
libhijacker/source/: backtrace.cpp  offsets.cpp
libhijacker/source/elf/: elf.cpp
shellcode/: build_cmd.txt  rfork_thread.c
spawner/: CMakeLists.txt
spawner/source/: main.cpp  start.c
